2007-08-01  Ben Motmans <ben.motmans@gmail.com>

	* SqlServerSchemaProvider.cs: Catch exceptions and notify the user

2007-07-31  Ben Motmans <ben.motmans@gmail.com>

	* SqlServerDbFactory.cs, SqlServerGuiProvider.cs: Added a GuiProvider
	* SqlServerSchemaProvider.cs: small api changes

2007-07-25  Ben Motmans <ben.motmans@gmail.com>

	* SqlServerPooledDbConnection.cs: expose the GetSchema method of the internal connection
	* SqlServerDbFactory.cs, SqlServerSchemaProvider.cs: improved metadata support

2007-07-18  Ben Motmans <ben.motmans@gmail.com>

	* SqlServerSchemaProvider.cs: SupportsSchemaOperation implementation, use of strongly typed
	collections, Drop* and Rename* implementations

2007-07-17  Ben Motmans <ben.motmans@gmail.com>

	* Makefile.am: initial makefile
	* SqlServerDbFactory.cs: implemented methods required for the connection settings dialog

2007-07-15  Ben Motmans <ben.motmans@gmail.com>

	* SqlServerDialect.cs: dialect implementation with keyword detection
	* SqlServerDbFactory.cs: use SqlServerDialect instead of the obsolete Sql99Dialect

2007-07-14  Ben Motmans <ben.motmans@gmail.com>

	* SqlServerConnectionProvider.cs, SqlServerDbFactory.cs, SqlServerSchemaProvider.cs: small changes
	to reflect API changes
	* SqlServerPooledDbConnection.cs: implementation of ConnectionPool aware connection

2007-07-10  Ben Motmans <ben.motmans@gmail.com>

	* SqlServerConnectionProvider.cs: set IsConnectionError property

2007-07-05  Ben Motmans <ben.motmans@gmail.com>

	* SqlServerConnectionProvider.cs: ExecuteQueryAsDataSet and ExecuteQueryAsDataTable implementation
	* SqlServerDbFactory.cs: specified the ISqlDialect and added default connection settings
	* Renamed MsSql* to SqlServer*

2007-07-02  Ben Motmans <ben.motmans@gmail.com>

	* MsSqlConnectionProvider.cs: 
	* MsSqlSchemaProvider.cs: 
	Fixed several compilation issues
	Added Close () statements when the IDataReader is no longer needed

2007-07-01  Ben Motmans <ben.motmans@gmail.com>
