@@ -10,6 +10,11 @@ REFS =  \
 	-r:$(top_builddir)/build/AddIns/MonoDevelop.Ide.dll \
 	-r:$(top_builddir)/build/AddIns/MonoDevelop.Projects.dll \
 	-r:$(top_builddir)/build/bin/MonoDevelop.Core.dll \
+	-r:$(top_srcdir)/build/AddIns/MonoDevelop.Components.dll \
+	-r:$(top_srcdir)/build/AddIns/MonoDevelop.Core.Gui.dll \
+	-r:$(top_srcdir)/build/AddIns/MonoDevelop.Ide.dll \
+	-r:$(top_srcdir)/build/AddIns/MonoDevelop.Projects.dll \
+	-r:$(top_srcdir)/build/bin/MonoDevelop.Core.dll \
 	-r:$(top_srcdir)/contrib/Mono.Addins.dll \
 	-r:System \
 	-r:System.Data
